<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/conversor_de_temperatura"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/main"/>

        <EditText
            android:id="@+id/edtTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="25"
            android:background="@color/white"
            android:hint="@string/digite_a_temperatura"
            android:textColorHint="@color/black"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/black"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/rgOrigem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Celsius" android:textColor="@color/black"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Fahrenheit" android:textColor="@color/black"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Kelvin" android:textColor="@color/black"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/para"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/rgDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/black" android:text="@string/celsius"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/black" android:text="@string/fahrenheit"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/black" android:text="@string/kelvin"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpar"
                android:textColor="@color/white"
                android:backgroundTint="@color/main"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btnConverter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/converter"
                android:textColor="@color/white"
                android:backgroundTint="@color/main"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aguardando_valor"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/tvHistorico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historico"
            android:background="@color/white"
            android:padding="10dp"/>

    </LinearLayout>
</ScrollView>